# homelab

./: .editorconfig  .gitignore  Makefile  README.org  ansible.cfg  hosts  pyproject.toml
playbooks/: .gitignore  applications.yml  disks.yml  main.yml  system.yml  upload_ssh_key.yml
